[package]
name = "paillier"
version = "0.2.1-alpha.0"
authors = [
  "Mario Cornejo <murdix@gmail.com>",
  "Morten Dahl <mortendahlcs@gmail.com>",
  "Mathieu Poumeyrol <mathieu.poumeyrol@snips.ai>"
]
description = "A pure-Rust implementation of the Paillier encryption scheme"
keywords = [
  "paillier",
  "cryptography",
  "homomorphic-encrypt",
  "secure-computation",
  "zero-knowledge",
]
homepage = "https://github.com/mortendahl/rust-paillier"
repository = "https://github.com/mortendahl/rust-paillier"
documentation = "https://docs.rs/paillier"
license = "MIT/Apache-2.0"
categories = ["cryptography"]

[badges]
travis-ci = { repository = "mortendahl/rust-paillier" }

[features]
default = ["useramp", "keygen", "wasm"]
keygen = []
proofs = ["ring"]
useramp = ["ramp"]
useframp = ["framp"]
usegmp = ["rust-gmp"]
gmp_nonsec = []
wasm = ["rand_chacha"]

[dependencies]
num-traits = "0.1"
rand_chacha = { version = "0.3.1", optional = true }
rand = { version = "0.8.5", default-features = false }
rayon = "1.0"
serde = "1.0"
serde_derive = "1.0"
ramp = { git = "https://github.com/scrtlabs/ramp", rev = "19ff0dc2b0ec0f3fea2590a83bf5a0468e206a0a", optional = true }
framp = { version = "0.3", optional = true }
rust-gmp = { version = "0.5", optional = true }
ring = { version = "0.13", optional = true }
bit-vec = "0.5"
lazy_static = "1.4.0"

[dev-dependencies]
bencher = "0.1"
# bencher = { git="https://github.com/snipsco-forks/bencher" }
serde_json = "1.0"

[[bench]]
name = "arith"
harness = false

[[bench]]
name = "encryption"
harness = false

[[bench]]
name = "keygen"
harness = false

[[bench]]
name = "proof"
harness = false
