[package]
name = "paillier"
version = "0.2.1-alpha.0"
authors = [
  "Mario Cornejo <murdix@gmail.com>",
  "Morten Dahl <mortendahlcs@gmail.com>",
  "Mathieu Poumeyrol <mathieu.poumeyrol@snips.ai>"
]
description = "A pure-Rust implementation of the Paillier encryption scheme, modified a bit to work in Secret Contracts"
keywords = [
  "paillier",
  "cryptography",
  "homomorphic-encrypt",
  "secure-computation",
  "zero-knowledge",
]
homepage = "https://github.com/mortendahl/rust-paillier"
repository = "https://github.com/mortendahl/rust-paillier"
documentation = "https://docs.rs/paillier"
license = "MIT/Apache-2.0"
categories = ["cryptography"]

[badges]
travis-ci = { repository = "mortendahl/rust-paillier" }

[features]
default = ["useramp", "keygen", "wasm"]
keygen = []
proofs = ["ring"]
useramp = ["ramp"]
useframp = ["framp"]
usegmp = ["rust-gmp"]
gmp_nonsec = []
wasm = ["rand_chacha"]

[dependencies]
num-traits = { git = "https://github.com/scrtlabs/num-traits", rev = "1cb7c5de33563fc40351df681546cdc963e788dd" }
rand_chacha = { version = "0.3.1", optional = true }
rand = { version = "0.8.5", default-features = false }
rayon = "1.0"
serde = { version = "1.0.147", default-features = false, features = ["derive"] }
serde_derive = "1.0"
ramp = { git = "https://github.com/scrtlabs/ramp", rev = "fc56d683e36fc27a71c2caf5219600f97e83e983", optional = true }
framp = { version = "0.3", optional = true }
rust-gmp = { version = "0.5", optional = true }
ring = { version = "0.13", optional = true }
bit-vec = { version = "0.6.3", default-features = false, features = [
  "serde_no_std"
] }
lazy_static = "1.4.0"

[dev-dependencies]
bencher = "0.1"
# bencher = { git="https://github.com/snipsco-forks/bencher" }
serde_json = "1.0"

[[bench]]
name = "arith"
harness = false

[[bench]]
name = "encryption"
harness = false

[[bench]]
name = "keygen"
harness = false

[[bench]]
name = "proof"
harness = false
